--- a/bbresume/index.html
+++ b/bbresume/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="magnific-popup//magnific-popup.css">
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
                     <span><strong>BB</strong>Resume.com</span>
                 </div>
                 <div class="btn">
-                    <p>Want to place your first order and save money? We’ll give you a 15% discoun</p>
+                    <p>Want to place your first order and save money? We’ll give you a 15% discount</p>
                     <button>SAVE15NOW</button>
                 </div>
                 <div class="phone">
@@ -75,10 +76,10 @@
         <div class="bottom_line">
             <div class="container">
                 <ul>
-                    <li><a href="#">24/7 Support</a></li>
-                    <li><a href="#">Refund Policy</a></li>
-                    <li><a href="#">Bonus System </a></li>
-                    <li><a href="#">Secure Payment Process</a></li>
+                    <li>24/7 Support</li>
+                    <li>Refund Policy</li>
+                    <li>Bonus System</li>
+                    <li>Secure Payment Process</li>
                 </ul>
             </div>
         </div>
@@ -436,6 +437,7 @@
         </ul>
     </section>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="magnific-popup/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
