--- a/bbresume/post.html
+++ b/bbresume/post.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="magnific-popup//magnific-popup.css">
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
                     <span><strong>BB</strong>Resume.com</span>
                 </div>
                 <div class="btn">
-                    <p>Want to place your first order and save money? We’ll give you a 15% discoun</p>
+                    <p>Want to place your first order and save money? We’ll give you a 15% discount</p>
                     <button>SAVE15NOW</button>
                 </div>
                 <div class="phone">
@@ -178,6 +179,7 @@
         </ul>
     </section>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="magnific-popup/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
