--- a/bbresume/services.html
+++ b/bbresume/services.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="magnific-popup//magnific-popup.css">
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
                     <span><strong>BB</strong>Resume.com</span>
                 </div>
                 <div class="btn">
-                    <p>Want to place your first order and save money? We’ll give you a 15% discoun</p>
+                    <p>Want to place your first order and save money? We’ll give you a 15% discount</p>
                     <button>SAVE15NOW</button>
                 </div>
                 <div class="phone">
@@ -104,19 +105,19 @@
                 <div class="sample_resume_slider">
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>1/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>2/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>3/3</span>
                     </div>
@@ -128,19 +129,19 @@
                 <div class="sample_resume_slider">
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>1/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>2/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>3/3</span>
                     </div>
@@ -152,19 +153,19 @@
                 <div class="sample_resume_slider">
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>1/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>2/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>3/3</span>
                     </div>
@@ -176,19 +177,19 @@
                 <div class="sample_resume_slider">
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>1/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>2/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>3/3</span>
                     </div>
@@ -200,19 +201,19 @@
                 <div class="sample_resume_slider">
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>1/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>2/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>3/3</span>
                     </div>
@@ -224,19 +225,19 @@
                 <div class="sample_resume_slider">
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>1/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>2/3</span>
                     </div>
                     <div class="item">
                         <div class="item_img">
-                            <img src="img/resume.jpg" alt="Sample resume">
+                            <a class="popupimg" href="img/resume.jpg"><img src="img/resume.jpg" alt="Sample resume"></a>
                         </div>
                         <span>3/3</span>
                     </div>
@@ -342,6 +343,7 @@
         </ul>
     </section>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="magnific-popup/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
