--- a/fish-processing/index.html
+++ b/fish-processing/index.html
@@ -7,48 +7,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/lightbox.min.css">
+  <link rel="stylesheet" href="assets/css/slick.css">
   <link rel="stylesheet" href="assets/css/main.css">
   <title>Обучение технологии переработки рыбы</title>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="header__logo">
-        <a href="/">
-          <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-               viewBox="0 0 82 82" style="enable-background:new 0 0 82 82;" xml:space="preserve">
-            <g>
-              <defs>
-                <path id="SVGID_1_" d="M51.3,50.9C38.9,60.3,13.7,52.8,0,47.5v-6c0.5,0.1,1,0.3,1.5,0.4c8,2.1,15.1,3.2,21.2,3.2
-                  c7.6,0,13.7-1.7,18.2-5.1C47.5,35,66.1,11.6,75,0h0.8C79.2,0,82,2.8,82,6.1v9C72.5,27.3,57,46.6,51.3,50.9z M39,37.6
-                  c-9.2,7-25.6,4.6-39,0.7v-6.6C4.5,32.6,8.6,33,12.3,33c7.6,0,13.7-1.7,18.2-5.1C35.3,24.3,46.1,11.3,55.1,0h16
-                  C61.8,11.9,45,33.1,39,37.6z M75.9,82H63.2c4.4-4,11.8-12.7,18.8-21.4v15.3C82,79.2,79.2,82,75.9,82z M6.1,82
-                  c-2.9,0-5.3-2-5.9-4.6C2.7,78.5,6.9,80.2,12,82H6.1z M28.7,25.5c-7,5.3-18,5.2-28.7,3.2v-6c7.4-0.1,13.4-1.8,17.7-5.1
-                  C21,15,27.3,7.9,33.9,0h17.3C42.6,10.7,32.9,22.3,28.7,25.5z M57.2,64.6c-14.5,11-46.5-1.3-57.2-5.8v-8c4,1.5,8.7,3.1,13.8,4.5
-                  c8,2.1,15.1,3.2,21.2,3.2c7.6,0,13.7-1.7,18.2-5.1c5.5-4.2,19.2-21.1,28.9-33.3v16.1C72.9,47.7,61.8,61.1,57.2,64.6z M15.9,15.1
-                  c-4.2,3.1-9.7,4.4-15.9,4.4V6.1C0,2.8,2.8,0,6.1,0h23.7C24.1,6.9,18.7,12.9,15.9,15.1z M59.7,80.9c-0.5,0.4-1.1,0.8-1.7,1.1H22.3
-                  C11.8,79.1,2.9,75.2,0,73.9V62.1c4.5,1.9,11.7,4.7,19.7,6.8c8,2.1,15.1,3.2,21.2,3.2c7.6,0,13.7-1.7,18.2-5.1
-                  c4.5-3.4,14.3-15.1,23-25.9v14.6L59.7,80.9z"/>
-              </defs>
-              <use xlink:href="#SVGID_1_"  style="overflow:visible;fill:#FE504F;"/>
-              <clipPath id="SVGID_2_">
-                <use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
-              </clipPath>
-            </g>
-          </svg>
-          <span>
-            Обучение <br>
-            переработки <br>
-            рыбной продукции
-          </span>
-        </a>
-      </div>
-      <div class="header__phone">
-        <a href="tel:8 927 812 92 33">8 927 812 92 33</a>
-        <button class="callback">Заказать обратный звонок</button>
+<header class="header">
+  <div class="container">
+    <div class="header__logo">
+      <a href="/">
+        <img src="assets/images/logo.png" alt="">
+      </a>
+      <div class="navbar">
+        <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </div>
-  </header>
+    <div class="header__phone">
+      <a href="tel:8 927 812 92 33">8 927 812 92 33</a>
+      <button class="callback">Заказать обратный звонок</button>
+    </div>
+  </div>
+  <div class="header__menu">
+    <div class="container">
+      <ul>
+        <li><a style="text-decoration: underline;" href="http://tehnology-fish.ru/">Переработка рыбы</a></li>
+        <li><a href="http://tehnology-fish.ru/marinade.html">Посольные смеси</a></li>
+        <li><a href="http://tehnology-fish.ru/distribution.html">Построение дистрибуции</a></li>
+        <li><a href="http://tehnology-fish.ru/specialists.html">Специалисты</a></li>
+        <li><a href="http://tehnology-fish.ru/contacts.html">Контакты</a></li>
+      </ul>
+    </div>
+  </div>
+</header>
   <section class="banner">
     <div class="container">
       <div class="banner__title">
@@ -68,6 +58,7 @@
           онлайн консультацию
         </h3>
         <form>
+          <input type="text" name="page_form1" value="Обучение технологии переработки рыбы" class="hidden" required>
           <input type="text" name="name" placeholder="Имя*" class="banner__input contacts-name" required>
           <input type="tel" name="tel" placeholder="Телефон*" class="banner__input contacts-phone phone" required>
           <input type="email" name="email" placeholder="Email*" class="banner__input contacts-email" required>
@@ -87,6 +78,11 @@
             Ваши данные защищены
           </p>
         </form>
+      </div>
+    </div>
+    <div class="container">
+      <div class="banner__result">
+        Опыт в переработке и продаже рыбной продукции более 15 лет
       </div>
     </div>
   </section>
@@ -114,7 +110,7 @@
                 <li>Срок годности продукции 6 мес.</li>
                 <li>Цикл производства — 3 дня</li>
               </ul>
-              <a href="#" class="snacks-open">Документы для заказчика</a>
+              <a href="javascript:void(0);" class="snacks-open">Документы для заказчика</a>
             </div>
           </div>
           <div class="info-block__item">
@@ -128,7 +124,7 @@
                 <li>Документация прилагается</li>
                 <li>Срок годности продукции 1 мес.</li>
                 <li>Цикл производства — 2-10 дней</li>
-                <a href="#" class="smoking-open">Документы для заказчика</a>
+                <a href="javascript:void(0);" class="smoking-open">Документы для заказчика</a>
               </ul>
             </div>
           </div>
@@ -144,7 +140,7 @@
                 <li>Срок годности продукции 2-3 мес. </li>
                 <li>Цикл производства — 1-2 дня</li>
               </ul>
-              <a href="#" class="preserve-open">Документы для заказчика</a>
+              <a href="javascript:void(0);" class="preserve-open">Документы для заказчика</a>
             </div>
           </div>
         </div>
@@ -161,7 +157,7 @@
                 <li>Срок годности продукции 2 мес. </li>
                 <li>Цикл производства — 2-10 дней</li>
               </ul>
-              <a href="#" class="drying-open">Документы для заказчика</a>
+              <a href="javascript:void(0);" class="drying-open">Документы для заказчика</a>
             </div>
           </div>
           <div class="info-block__item">
@@ -176,7 +172,7 @@
                 <li>Срок годности продукции 14 дней</li>
                 <li>Цикл производства — 1-3 дня</li>
               </ul>
-              <a href="#" class="pickles-open">Документы для заказчика</a>
+              <a href="javascript:void(0);" class="pickles-open">Документы для заказчика</a>
             </div>
           </div>
           <div class="info-block__item">
@@ -191,7 +187,7 @@
                 <li>Срок годности продукции 6-12 мес.</li>
                 <li> Цикл производства — 1 день</li>
               </ul>
-              <a href="#" class="semifinished-open">Документы для заказчика</a>
+              <a href="javascript:void(0);" class="semifinished-open">Документы для заказчика</a>
             </div>
           </div>
         </div>
@@ -209,6 +205,7 @@
         </div>
         <div class="question__form">
           <form>
+            <input type="text" name="page_form" value="Обучение технологии переработки рыбы" class="hidden" required>
             <input type="text" name="name" placeholder="Имя*" class="banner__input contacts-name2" required>
             <input type="tel" name="tel" placeholder="Телефон*" class="banner__input contacts-phone2 phone" required>
             <input type="email" name="email" placeholder="Email*" class="banner__input contacts-email2" required>
@@ -477,16 +474,16 @@
       </div>
       <div class="reviews__list">
         <div class="reviews__item">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/kBajHY-nJRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/AzPRX9xQXQE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="reviews__item">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ry1BwmvDwNo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/F99efXUEngk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="reviews__item">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/6JH_0C0BccI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/A8Mra5kF69I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="reviews__item">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ruEzBWufJGs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ZkJ3dmi3M4g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
       <div class="info-block__desc">
@@ -503,32 +500,7 @@
     <div class="container">
       <div class="footer__logo">
         <a href="/">
-          <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-               viewBox="0 0 82 82" style="enable-background:new 0 0 82 82;" xml:space="preserve">
-            <g>
-              <defs>
-                <path id="SVGID_1_" d="M51.3,50.9C38.9,60.3,13.7,52.8,0,47.5v-6c0.5,0.1,1,0.3,1.5,0.4c8,2.1,15.1,3.2,21.2,3.2
-                  c7.6,0,13.7-1.7,18.2-5.1C47.5,35,66.1,11.6,75,0h0.8C79.2,0,82,2.8,82,6.1v9C72.5,27.3,57,46.6,51.3,50.9z M39,37.6
-                  c-9.2,7-25.6,4.6-39,0.7v-6.6C4.5,32.6,8.6,33,12.3,33c7.6,0,13.7-1.7,18.2-5.1C35.3,24.3,46.1,11.3,55.1,0h16
-                  C61.8,11.9,45,33.1,39,37.6z M75.9,82H63.2c4.4-4,11.8-12.7,18.8-21.4v15.3C82,79.2,79.2,82,75.9,82z M6.1,82
-                  c-2.9,0-5.3-2-5.9-4.6C2.7,78.5,6.9,80.2,12,82H6.1z M28.7,25.5c-7,5.3-18,5.2-28.7,3.2v-6c7.4-0.1,13.4-1.8,17.7-5.1
-                  C21,15,27.3,7.9,33.9,0h17.3C42.6,10.7,32.9,22.3,28.7,25.5z M57.2,64.6c-14.5,11-46.5-1.3-57.2-5.8v-8c4,1.5,8.7,3.1,13.8,4.5
-                  c8,2.1,15.1,3.2,21.2,3.2c7.6,0,13.7-1.7,18.2-5.1c5.5-4.2,19.2-21.1,28.9-33.3v16.1C72.9,47.7,61.8,61.1,57.2,64.6z M15.9,15.1
-                  c-4.2,3.1-9.7,4.4-15.9,4.4V6.1C0,2.8,2.8,0,6.1,0h23.7C24.1,6.9,18.7,12.9,15.9,15.1z M59.7,80.9c-0.5,0.4-1.1,0.8-1.7,1.1H22.3
-                  C11.8,79.1,2.9,75.2,0,73.9V62.1c4.5,1.9,11.7,4.7,19.7,6.8c8,2.1,15.1,3.2,21.2,3.2c7.6,0,13.7-1.7,18.2-5.1
-                  c4.5-3.4,14.3-15.1,23-25.9v14.6L59.7,80.9z"/>
-              </defs>
-              <use xlink:href="#SVGID_1_"  style="overflow:visible;fill:#FE504F;"/>
-              <clipPath id="SVGID_2_">
-                <use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
-              </clipPath>
-            </g>
-          </svg>
-          <span>
-            Обучение <br>
-            переработки <br>
-            рыбной продукции
-          </span>
+          <img src="assets/images/logo-footer.png" alt="">
         </a>
       </div>
       <div class="footer__phone">
@@ -537,7 +509,7 @@
       </div>
     </div>
   </footer>
-  <div class="modal">
+  <div class="modal modal-callback">
     <div class="modal__window">
       <button class="close">
         <i class="fa fa-times-circle" aria-hidden="true"></i>
@@ -546,6 +518,7 @@
         <h3>Закажите звонок</h3>
       </div>
       <form>
+        <input type="text" name="page_modal" value="Обучение технологии переработки рыбы" class="hidden" required>
         <input type="text" name="name_modal" placeholder="Имя*" class="banner__input callback_name" required>
         <input type="tel" name="tel_modal" placeholder="Телефон*" class="banner__input callback_phone phone" required>
         <button id="#callback" type="submit" class="banner__submit">Перезвоните мне</button>
@@ -685,7 +658,8 @@
   </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="assets/js/lightbox.min.js"></script>
-  <script src="assets/js/jquery.maskedinput.min.js"></script>
+<script src="assets/js/jquery.maskedinput.min.js"></script>
+<script src="assets/js/slick.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
