--- a/fish-processing/distribution.html
+++ b/fish-processing/distribution.html
@@ -476,6 +476,41 @@
   </div>
 </section>
 
+
+<ul>
+  <li>
+    <strong>Вид ремонта</strong>
+    <strong>Цена от:</strong>
+  </li>
+  <li>
+    Замена масла в двигателе
+    <span>700</span>
+  </li>
+  <li>
+    Замена масла в раздаточной коробкe
+    <span>600</span>
+  </li>
+  <li>
+    Замена масла в редукторе
+    <span>600</span>
+  </li>
+  <li>
+    Замена свечей зажигания
+    <span>600</span>
+  </li>
+  <li>
+    Замена воздушного фильтра
+    <span>200</span>
+  </li>
+  <li>
+    Замена блока предохранителей
+    <span>2500</span>
+  </li>
+  <li>
+    Плановые ТО
+    <span>3000</span>
+  </li>
+</ul>
 <section class="online-program">
   <div class="container">
     <div class="online-program__title">
